# ai-coding-mentor

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/agents/: analysis_agent.py  challenge_data.py  evaluation_agent.py  execution_agent.py  llm.py  mentor_agent.py  router_agent.py  untrusted.py
backend/api/: middleware.py  models.py  orchestrator.py  rate_limit.py  routes.py
backend/db/: session_store.py  supabase_client.py
backend/db/migrations/: 0001_create_mentor_tables.sql  0002_lock_down_rls.sql
backend/graph/: mentor_graph.py  state.py
backend/observability/: eval_dashboard.py  langfuse_setup.py  session_tracker.py
backend/sandbox/: docker_runner.py
backend/tests/: test_api.py  test_sandbox.py
challenges/challenge_01/: metadata.json  rubric.json
challenges/challenge_02/: metadata.json  rubric.json
challenges/challenge_03/: metadata.json  rubric.json
docs/: orchestration-review.md
docs/adr/: 0001-graph-is-design-artifact-orchestrator-drives-nodes.md  0002-state-passing-only-no-tool-calls.md  0003-hint-level-is-server-authoritative-state.md  0004-nvidia-free-tier-tiered-by-node.md  0005-service-role-key-and-app-level-authorization.md  0006-deployment-requires-docker-socket-access.md
docs/security/: sandbox-audit.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  (+2 more)
sandbox/: Dockerfile
(+21 files in other folders)
